# Mini_Notes

./: .gitignore  README.md  app.json  manifest.json
bundle/: app.js  index.html
executas/mini-notes/: mini_notes_plugin.py  pyproject.toml
