[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-dev-mini-notes"
version = "0.1.0"
description = "Executa for the mini-notes Anna App"
requires-python = ">=3.10"

[project.scripts]
"tool-dev-mini-notes" = "mini_notes_plugin:main"

[tool.setuptools]
py-modules = ["mini_notes_plugin"]
